# astonia_client_DB

./: .gitignore  CMakeLists.txt  COMPILATION_FIXES.md  Dockerfile  Makefile  README_BUILD.md  build-linux.sh  build-macos.sh
.github/: CONTRIBUTING.md
.github/workflows/: README.md  build-test.yml  build.yml  code-quality.yml
cmake/: FindSDL2.cmake
src/: astonia.h  client.h  game.h  gui.h  modder.h  platform.c  platform.h  sdl.h
src/amod/: amod.c  amod.h  amod_structs.h  quests.c  ranks.c  skills.c  strings.c
src/amod/gui/: volumewidget.c  volumewidget.h
src/client/: _client.h  client.c  skill.c
src/game/: _game.h  dd.c  font.c  game.c  main.c  resource.h  sprite.c  version.c
src/gui/: _gui.h  cmd.c  color.c  context.c  display.c  dots.c  gui.c  hover.c  minimap.c  questlog.c  teleport.c
src/helper/: anicopy.c  convert.c  helper.c
src/modder/: modder.c  sharedmem.c
src/sdl/: _sdl.h  sdl.c  sound.c
